# manusmcp

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  flow.json  langgraph.json  litellm.yml  main.py  manus v2 Agents.json  pyproject.toml  start.sh  test Agents.json
.runtime/: README.md  index.ts  package.json  pyproject.toml  requirements.txt
.runtime/src/services/: browserService.ts  fileService.ts  shellService.ts
.runtime/src/types/: index.ts
.runtime/templates/nextjs/: .gitignore  package.json
langgraphjs/agents/agentic/: drizzleSaver.ts  index.ts  model.ts  prompts.ts  state.ts  supervisor.ts  tools.ts  types.ts
langgraphjs/agents/agentic/workers/: browser-worker.ts  fs-worker.ts  index.ts  kb-worker.ts  shell-worker.ts
langgraphjs/db/: schema.ts
manusmcp/: __main__.py  config.py  old.txt  tools.py
pytools/: .env.example  .gitignore  docker-compose.yml  flowise.sh  pyproject.toml
pytools/flows/: v2.2 Agents.json  v2.3 Agents.json
pytools/src/manusmcp/: __init__.py  tools.py
site/: docker-compose.yml  drizzle.config.ts  package-lock.json  package.json
site/scripts/: push-db.js
site/src/: env.js
site/src/app/: page.tsx
site/src/app/_components/chat/: chat-input-container.tsx  chat-input.tsx  message-list.tsx  message.tsx  thread-list.tsx
site/src/app/_components/ui/: button.tsx  input.tsx  textarea.tsx
site/src/app/chat/: layout.tsx
site/src/app/chat/[threadId]/: page.tsx
site/src/lib/: utils.ts
site/src/server/agent/: fileWorker.ts  index.ts  kbWorker.ts  model.ts  supervisor.ts
site/src/server/agent/tools/: browserService.ts  fileService.ts  index.ts  shellService.ts
site/src/server/api/: root.ts
site/src/server/api/routers/: chat.ts
site/src/server/db/: schema.ts
site/src/server/graphs/: fileWorker.ts  index.ts  kbWorker.ts  model.ts  supervisor.ts
site/src/server/graphs/tools/: browserService.ts  fileService.ts  index.ts  shellService.ts
src/: __init__.py  model.py  model_types.py  prompts.py  state.py  supervisor.py  tools.py
src/manusmcp/: __init__.py  config.py  server.py  tools.py
src/workers/: __init__.py  browser.py  fs.py  kb.py  shell.py
